# qa_guru_mobile

./: .env  .gitignore  README.md  config.browserstack.env  config.emulation.env  config.py  conftest.py  pyproject.toml
qa_guru_mobile/utils/: file.py
qa_guru_mobile/utils/allure/: attachments.py
qa_guru_mobile/utils/selene/: patch_element_mobile_commands.py  patch_selector.py
qa_guru_mobile_1/extensions/: __init__.py
qa_guru_mobile_1/extensions/selene/: patch_selector.py
tests/: conftest.py
tests/android/: test_wiki.py
typings/selene/core/: entity.pyi
